--- a/app/src/main/res/layout/fragment_wizard_address.xml
+++ b/app/src/main/res/layout/fragment_wizard_address.xml
@@ -43,27 +43,26 @@
 				app:icon="@drawable/ic_star"
 				app:iconGravity="textStart"
 				app:iconPadding="0dp"
-				app:iconTint="@color/btn_icon_default"
-				android:onClick="onMineuPlexa"/>
+				app:iconTint="@color/btn_icon_default" />
 
 		</LinearLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
+		<com.google.android.material.textfield.TextInputLayout
 			android:id="@+id/addressIL"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+			style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="5dp"
 			app:errorTextAppearance="@style/TextErrorStyle"
 			app:errorEnabled="false">
 
-            <com.google.android.material.textfield.TextInputEditText
+			<com.google.android.material.textfield.TextInputEditText
 				android:id="@+id/addressWizard"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
 				android:textSize="14sp" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+		</com.google.android.material.textfield.TextInputLayout>
 
 		<LinearLayout
 			android:orientation="horizontal"
@@ -71,22 +70,22 @@
 			android:layout_height="wrap_content"
 			android:gravity="end">
 
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="50dp"
-                android:layout_marginEnd="5dp"
-                android:layout_weight="1"
-                android:backgroundTint="@color/bg_lighter"
-                android:text="@string/paste"
-                android:textSize="14sp"
-                android:textAllCaps="false"
-                android:textColor="@color/txt_button_filled"
-                android:onClick="onPaste"
-                app:icon="@drawable/ic_paste"
-                app:iconGravity="textStart"
-                app:iconSize="18dp"
+			<Button
+				android:id="@+id/btnPaste"
+				android:layout_width="fill_parent"
+				android:layout_height="50dp"
+				android:layout_marginEnd="5dp"
+				android:layout_weight="1"
+				android:backgroundTint="@color/bg_lighter"
+				android:text="@string/paste"
+				android:textSize="14sp"
+				android:textAllCaps="false"
+				android:textColor="@color/txt_button_filled"
+				app:icon="@drawable/ic_paste"
+				app:iconGravity="textStart"
+				app:iconSize="18dp"
 				app:iconTint="@color/btn_icon_default"
-                app:cornerRadius="5dp" />
+				app:cornerRadius="5dp" />
 
 		</LinearLayout>
 
@@ -106,7 +105,6 @@
 			android:layout_marginEnd="15dp"
 			android:layout_marginBottom="15dp"
 			android:backgroundTint="@color/bg_blue"
-			android:onClick="onNext"
 			android:text="@string/next"
 			android:textSize="14sp"
 			android:textAllCaps="false"
